test/asm/pc-bank.err
ERROR: pc-bank.asm(2):
    Source address $2a00 not in $FF00 to $FFFF
ERROR: pc-bank.asm(11):
    Expected constant expression: Current section's bank is not known
error: Assembly aborted (2 errors)!
